--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #312e81;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff;
 }
 
 .App-link {
