--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
 }
 
 .App-header {
-  background-color: #312e81;
+  background-color: var(--grey);
   min-height: 100vh;
-  color: #fff;
+  color: var(--defaultTextColor);
 }
 
 .App-link {
@@ -32,13 +32,7 @@
   }
 }
 
-legend {
-  background-color: rgb(255, 255, 255);
-  padding: 5px 10px;
-  font-size: larger;
-  color: rgb(0, 0, 0);
-  font-weight: bold;
-}
+
 
 .clip {
   clip-path: polygon(0 0, 0% 100%, 100% 50%);
