--- a/src/styles/textstyle.module.css
+++ b/src/styles/textstyle.module.css
@@ -33,11 +33,9 @@
 
 .subtitleXL {
   font-family: var(--fontFamily);
-  
   font-size: 28px;
   line-height: 38px;
   font-weight: bold;
-
 }
 
 .subtitleL {
@@ -53,12 +51,10 @@
   font-size: 20px;
   line-height: 27px;
   font-weight: 600;
-
 }
 
 .subtitleS {
   font-family: var(--fontFamily);
-  
   font-size: 18px;
   line-height: 24px;
   font-weight: normal;
@@ -76,7 +72,6 @@
 
 .bodyM {
   font-family: var(--fontFamily);
-  
   font-size: 14px;
   line-height: 19px;
   font-weight: 600;
@@ -98,7 +93,23 @@
 
 
 /* For extremely small screen devices (595px and below) */
-@media only screen and (max-width: 595px) {}
+@media only screen and (max-width: 595px) {
+
+  .subtitleM {
+    font-family: var(--fontFamily);
+    font-size: 15px;
+    line-height: 21px;
+    font-weight: 600;
+  }
+  
+  .subtitleS {
+    font-family: var(--fontFamily);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+  
+  }
+}
  
 /* Small screen devices (600px and above) */
 @media only screen and (min-width: 600px) {}
