--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --borderColor: 1px Solid #E6356F;
   --borderContainer: 1px Solid #C7C7CD;
   --defaultTextColor: #333333;
+  --black: #333333;
   --grey: #EFFFFF;
   --white: #FFFFFF;
 }
