--- a/src/styles/textstyle.module.css
+++ b/src/styles/textstyle.module.css
@@ -1,10 +1,9 @@
 
 .titleXl {
   font-family: var(--fontFamily);
-  
   font-size: 48px;
   line-height: 35px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .titleL {
@@ -35,7 +34,7 @@
   font-family: var(--fontFamily);
   font-size: 28px;
   line-height: 38px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .subtitleL {
@@ -63,10 +62,9 @@
 
 .bodyL {
   font-family: var(--fontFamily);
-  
   font-size: 18px;
   line-height: 24px;
-  font-weight: bold;
+  font-weight: 900;
 
 }
 
@@ -91,6 +89,18 @@
   color: var(--white);
 }
 
+.blackText{
+  color: var(--black);
+}
+
+.textCenter{
+  text-align: center;
+}
+
+.primaryColorText{
+  color: var(--primaryColor);
+}
+
 
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 595px) {
@@ -108,6 +118,13 @@
     line-height: 18px;
     font-weight: normal;
   
+  }
+
+  .subtitleXL {
+    font-family: var(--fontFamily);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 900;
   }
 }
  
