--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -1,27 +1,10 @@
-.cardContainer {
-  border-radius: 10px;
+.primaryBtn {
+  background-color: var(--primaryColor);
+  height: 40px;
+  padding: 16px auto;
   color: var(--white);
-  background-color: var(--black);
-  overflow: hidden;
-  border: var(--borderColor);
-   box-shadow: var(--black) 0px 20px 40px -10px,
-    var(--black) 0px 12px 22px -12px;
+  border-radius: 5px;
+  /* justify-content: center;  */
+  width: 100%;
+  text-decoration: none;
 }
-
-/* For extremely small screen devices (595px and below) */
-@media only screen and (max-width: 595px) {
-
-
-}
- 
-/* Small screen devices (600px and above) */
-@media only screen and (min-width: 600px) {}
- 
-/* Medium screen devices (768px and above) */
-@media only screen and (min-width: 768px) {}
- 
-/* Big screen devices (889px and above) */
-@media only screen and (min-width: 889px) {}
- 
-/* Extra big screen devices (1200px and above) */
-@media only screen and (min-width: 1200px) {}
