--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -12,8 +12,22 @@
   background-color: var(--grey);
   border: var(--borderContainer);
   height: 40px;
-  padding: 16px auto;
+  padding-left: 36px;
+  padding-right: 36px;
   color: var(--defaultTextColor);
+  border-radius: 5px;
+  width: 100%;
+  text-decoration: none;
+}
+
+
+.secondaryBtn:hover {
+  background-color: var(--primaryColor);
+  border: var(--borderColor);
+  height: 40px;
+  padding-left: 36px;
+  padding-right: 36px;
+  color: var(--white);
   border-radius: 5px;
   width: 100%;
   text-decoration: none;
