--- a/src/styles/filterbyprice.module.css
+++ b/src/styles/filterbyprice.module.css
@@ -1,6 +1,4 @@
-.filterBox{
 
-}
 
 div.filterBox select{
     background-color:transparent !important;
@@ -15,4 +13,14 @@ div.filterBox select{
 
 div.filterBox select:after {
     content: url('../assets/Icons/angle-down.svg');
-  }
+}
+
+  /* For extremely small screen devices (595px and below) */
+  @media only screen and (max-width: 595px) {
+  
+    div.filterBox select{
+       margin-top: 10px;
+       margin-bottom: 10px;
+    }
+    
+}
