--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -32,3 +32,15 @@
   width: 100%;
   text-decoration: none;
 }
+
+.secondaryBtn:focus {
+  background-color: var(--primaryColor);
+  border: var(--borderColor);
+  height: 40px;
+  padding-left: 36px;
+  padding-right: 36px;
+  color: var(--white);
+  border-radius: 5px;
+  width: 100%;
+  text-decoration: none;
+}
