--- a/src/styles/legend.module.css
+++ b/src/styles/legend.module.css
@@ -7,65 +7,61 @@
   background-color: var(--primaryColor);
 }
 
-
-
 @media only screen and (max-width: 595px) {
-    .pad5{
-        padding: 6px;
-     }
-    .contentHolder{
-        flex-direction: column;
-        margin-top: 2%;
-        margin-bottom: 2%;
-        padding: 6%;
-        align-items: flex-start;
-    }
+  .pad5 {
+    padding: 6px;
+  }
+  .contentHolder {
+    flex-direction: column;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    padding: 6%;
+    align-items: flex-start;
+  }
 }
-
 
 @media only screen and (min-width: 600px) {
-  .pad5{
+  .pad5 {
     padding: 6px;
- }
-  .contentHolder{
-    flex-direction: column;
+  }
+  .contentHolder {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
     margin-top: 2%;
     margin-bottom: 2%;
-    padding: 4%;
-    align-items: flex-start;
-}
+    padding: 20px 20px;
+    
+  }
 }
 
-
-@media only screen and (min-width: 768px) and (max-width: 890px){
-  .pad5{
+@media only screen and (min-width: 768px) and (max-width: 890px) {
+  .pad5 {
     padding: 6px;
- }
-  .contentHolder{
-    flex-direction: column;
+  }
+  .contentHolder {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
     margin-top: 2%;
     margin-bottom: 2%;
-    padding: 4%;
-    align-items: flex-start;
+    padding: 20px 20px;
+    
+  }
 }
-
-}
-
 
 @media only screen and (min-width: 768px) {
 }
 
 /* Big screen devices (889px and above) */
 @media only screen and (min-width: 889px) {
-  .contentHolder{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-evenly;
-      margin-top: 2%;
-      margin-bottom: 2%;
-      padding: 1.5% 0% 1.5% 0%;
+  .contentHolder {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    padding: 20px 20px;
+    
   }
 }
-
