--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -10,7 +10,7 @@
 
 .secondaryBtn {
   background-color: var(--grey);
-  border: var(--borderContainer);
+  border: var(--primaryColorBorder);
   height: 40px;
   padding-left: 36px;
   padding-right: 36px;
@@ -23,7 +23,7 @@
 
 .secondaryBtn:hover {
   background-color: var(--primaryColor);
-  border: var(--borderColor);
+  border: var(--secondaryColorBorder);
   height: 40px;
   padding-left: 36px;
   padding-right: 36px;
@@ -35,7 +35,7 @@
 
 .secondaryBtn:focus {
   background-color: var(--primaryColor);
-  border: var(--borderColor);
+  border: var(--secondaryColorBorder);
   height: 40px;
   padding-left: 36px;
   padding-right: 36px;
