--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -16,7 +16,9 @@
   border-radius: 5px;
   width: 100%;
   text-decoration: none;
+  border: var(--primaryColorBorder);
 }
+
 
 .secondaryBtn {
   background-color: var(--grey);
